# ben

./: LICENSE  README.md  ben.cabal  stack.yaml
examples/fibonacci/: bad.py  good.py  run-benchmark.sh
examples/string-solving/: run-benchmark.sh
examples/string-solving/test-instances/: sat-no-regex-1.smt2  sat-no-regex-2.smt2  sat-regex-1.smt2  sat-regex-2.smt2  unsat-no-regex-1.smt2  unsat-regex-1.smt2  unsat-regex-2.smt2  unsat-regex-3.smt2
src/: Analysis.hs  Classification.hs  CmdLine.hs  Main.hs  Measurement.hs  ProgressBar.hs  Tables.hs
