name:                ben
version:             0.1.0.0
homepage:            https://github.com/meipp/ben.git
license:             BSD3
license-file:        LICENSE
author:              meipp
copyright:           2023 meipp
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ben
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Measurement,
                       Classification,
                       Analysis,
                       ProgressBar,
                       Tables,
                       CmdLine
  default-language:    Haskell2010
  default-extensions:  NamedFieldPuns
  build-depends:       aeson,
                       array,
                       async >= 2.2 && < 3,
                       base >= 4.7 && < 5,
                       bytestring >= 0.11,
                       optparse-applicative,
                       pathwalk,
                       process,
                       time,
                       unliftio >= 0.2.10
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
