name:                ben
version:             0.1.0.0
homepage:            https://github.com/meipp/ben.git
license:             MIT
license-file:        LICENSE
author:              meipp
copyright:           2023 meipp
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
synopsis:            run benchmarks
description:
                     ben is an easy to use benchmarking tool that takes a set of programs
                     and a set of input files and runs every program on every input file
                     measuring their running time.
                     .
                     The programs benchmarked can be any valid shell command. On top of that,
                     ben allows for classifying and grouping program runs by their produced
                     output, parallelization, timeouts, JSON exports and repeated re-runs of
                     benchmark for empirical robustness.
maintainer:          meipp

source-repository head
  type: git
  location: https://github.com/meipp/ben.git

executable ben
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Measurement,
                       Classification,
                       Analysis,
                       ProgressBar,
                       Tables,
                       CmdLine
  default-language:    Haskell2010
  default-extensions:  NamedFieldPuns
  build-depends:       aeson,
                       array,
                       async >= 2.2 && < 3,
                       base >= 4.7 && < 5,
                       bytestring >= 0.11,
                       directory >= 1.3,
                       filepath >= 1.4,
                       optparse-applicative,
                       pathwalk,
                       process,
                       time,
                       unliftio >= 0.2.10
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
